<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">Points:</string>
    <string name="high_score">High Score:</string>
    <string name="move_right">Right</string>
    <string name="move_left">Left</string>
    <string name="move_up">Up</string>
    <string name="move_down">Down</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
</resources>
