<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="org.pondar.pacmankotlin.MainActivity" >

    <!-- Notice how the custom view is referenced here with
    a full package path-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/moveRight"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/move_right" />

        <Button
            android:id="@+id/moveUp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/move_up" />

        <Button
            android:id="@+id/moveDown"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/move_down"
            android:layout_width="0dp" />

        <Button
            android:id="@+id/moveLeft"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/move_left" />

    </LinearLayout>

    <TextView
        android:id="@+id/pointsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/highScoreView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/high_score" />

    <org.pondar.pacmankotlin.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </org.pondar.pacmankotlin.GameView>

</LinearLayout>
